traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:20: error: ';' expected but 'else' found.
  else { 
  ^